Fix: Turrets were going behind bunkers on battlefield after adding scan nodes.

--- a/css/aa.css
+++ b/css/aa.css
@@ -3092,9 +3092,13 @@ body.bnb .sprite.engineer.butthead.building {
   /* allow nested .scan-mode to show */
   contain: unset;
   overflow: visible;
-  /* ensure everything sits on top of scan nodes */
-  z-index: 1;
  }
+
+#radar .sprite.turret,
+#radar .sprite.missile-launcher {
+ /* ensure everything sits on top of scan nodes */
+ z-index: 1;
+}
 
 #battlefield .scan-node,
 #radar .scan-node {
